--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">H</span>iN</h3>
+            <h3 class="nav-title">Ma<span class="text-primary">h</span>in</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
