--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mahin Muntasir</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
                 </div>
-                <img class="profile-pic" src="images/meee.png" alt="">
+                <img class="profile-pic" src="images/meee (2).png" alt="">
         </div>
        
         
