--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I am a developer with a passion for web develop. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.
+            </p>
+
+        </section>
 
     </main>
     <footer>
