--- a/index.html
+++ b/index.html
@@ -24,24 +24,54 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mahin Muntasir</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
-                </div>
-                <img class="profile-pic" src="images/meee (2).png" alt="">
+            </div>
+            <img class="profile-pic" src="images/meee (2).png" alt="">
         </div>
-       
-        
+
+
 
     </header>
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">
-                I am a developer with a passion for web develop. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.
+                I am a developer with a passion for web develop. I enjoy developing simple, clean and slick websites
+                that provide real value to the end user. Thousands of clients have procured exceptional results while
+                working with me. Delivering work within time and budget which meets clients requirements in our meta.
             </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Mahin Muntasir</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">mahinmuntasir954@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">24 June 1997</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Barishal, Bangladesh</p>
+                </div>
+
+
+
+
+            </div>
+
+
+
+
+            </div>
 
         </section>
 
