--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                     </div>
                 </div>
             </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
 
 
