--- a/index.html
+++ b/index.html
@@ -174,10 +174,22 @@
                 <button class="btn-primary">Download CV</button>
             </div>
         </section>
-
-
     </main>
     <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-description">
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+            </p>
+            <div class="soical-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+        </div>
 
     </footer>
 </body>
