--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/6655510fe7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,8 +29,8 @@
                 <h1 class="banner-title">Mahin Muntasir</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/meee (2).png" alt="">
         </div>
@@ -171,7 +172,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
