--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="styles/portfolio.css">
     <script src="https://kit.fontawesome.com/6655510fe7.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/10782/10782439.png" type="image/x-icon">
 </head>
 
 <body>
